fix(theme): Dark mode styling of the from field, "More contacts" button
Fixes #607

--- a/internal_packages/composer/stylesheets/composer.less
+++ b/internal_packages/composer/stylesheets/composer.less
@@ -122,7 +122,7 @@ body.platform-win32 {
     padding-top: 12px;
   }
 
-  input, textarea {
+  input, textarea, .composer-participant-field {
     color: @text-color;
     position: relative;
     display: block;
@@ -160,7 +160,6 @@ body.platform-win32 {
 
     .num-remaining.token {
       color: @text-color;
-      color: rgba(0,0,0,0.6);
       padding-right: 12px;
       margin-left: 0;
       padding-top: 6px;
